fix: improve table styling with border radius and spacing adjustments

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -431,12 +431,6 @@ button.primary:hover, a.primary:hover, .btn.primary:hover {
     background: #dcd9d9;
 }
 
-th, td {
-    padding: var(--padding-fields);
-    border: solid 2px #d7d7d7;
-    border-radius: var(--border-radius);
-    text-align: left;
-}
 
 .bg-modal-primary {
     position: absolute;
@@ -467,7 +461,32 @@ th, td {
 
 .table > table {
     width: 100%;
-    border-collapse: collapse;
+    border-collapse: separate;
+    border-spacing: 0;
+    border-radius: var(--border-radius);
+    overflow: hidden;
+}
+
+th, td {
+    padding: var(--padding-fields);
+    border: solid 2px #d7d7d7;
+    text-align: left;
+}
+
+thead tr th:first-child { 
+    border-top-left-radius: var(--border-radius);
+}
+thead tr th:last-child { 
+    border-top-right-radius: var(--border-radius);
+}
+tbody tr:last-child td:last-child { 
+    border-bottom-right-radius: var(--border-radius);
+}
+tbody tr:last-child td:nth-last-child(2) {
+    border-bottom-right-radius: var(--border-radius);
+}
+tbody tr:last-child td:first-child { 
+    border-bottom-left-radius: var(--border-radius);
 }
 
 /* animations */
